@@ -1,5 +1,8 @@
 * What is new in gsl-2.5:
 
+** bug fix in gsl_spmatrix_add for duplicate input arguments
+   (reported by Alfredo Correa)
+
 ** add support for negative arguments nu in gsl_sf_bessel_Jnu and
    gsl_sf_bessel_Ynu (Konrad Griessinger)
 
